Урок 19 Операторы языка.

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 </head>
 
 <body>
+    <button class="plus">+</button>
+    <span class="result"></span>
     <script src="script.js"></script>
 </body>
 
